--- a/bootstrap.css
+++ b/bootstrap.css
@@ -27,8 +27,25 @@ aside,
 details,
 figcaption,
 figure,
-footer,
-header,
+footer{
+  position: relative;
+  float: left;
+  bottom: 0;
+  width: 100%;
+  height: 105px;
+  background-color: #403D65;
+}
+div.copyright{
+  height: 35px;
+  margin: 20px;
+  font-family:serif;
+  font-weight: 600;
+  font-size: 12px;
+  float: left;
+  margin-left: 700px;
+  float: none;
+  color: #B1AEDE;
+}
 hgroup,
 main,
 menu,
@@ -54,10 +71,12 @@ template {
 }
 a {
   background-color: transparent;
+  text-decoration: none;
 }
 a:active,
 a:hover {
   outline: 0;
+  text-decoration: underline;
 }
 abbr[title] {
   border-bottom: 1px dotted;
@@ -208,12 +227,49 @@ html {
   font-size: 10px;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+@import 'https://fonts.googleapis.com/css?family=Raleway|Roboto+Slab';
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  line-height: 1.42857143;
-  color: #333333;
-  background-color: #ffffff;
+  background-color: #53507E;
+  margin-left: 0%;
+  margin-right: 0%;
+}
+header {
+  height: 37px;
+  margin-top: 31px;
+  margin-left: auto;
+  margin-right: auto;
+  margin: 80px;
+  width: 1100px;
+}
+nav.shaedycultlogo{
+ float: left;
+}
+div.headerlinks{
+  float: right;
+}
+div.headerlinks a{
+  float:right;
+  color: #B1AEDE;
+  padding-left: 100px;
+  margin-right: -100px;
+  font-family:sans-serif;
+  font-weight:800;
+  font-size:12px;
+  margin-left: 35px;
+  margin-top: 12px;
+  text-decoration: none;
+}
+div.headerlinks a:hover{
+  color: #FFFFFF !important;
+}
+div.headerlinks a:active{
+  color: #FFFFFF !important;
+  border-bottom: 2px;
+  border-top: 0px;
+  border-left: 0px;
+  border-right: 0px;
+  border-color: #FF8ED8;
+  border-style: solid;
 }
 input,
 button,
