--- a/bootstrap.css
+++ b/bootstrap.css
@@ -46,6 +46,47 @@ div.copyright{
   float: none;
   color: #B1AEDE;
 }
+nav.navlinks a{
+  float: left;
+  padding-left: 35px;
+  font-family: sans-serif;
+  font-weight: 800;
+  font-size: 12px;
+  color:#B1AEDE;
+  margin-left: 30px;
+  margin-right: 35px;
+  margin-top: 10px;
+}
+nav.navlinks a:hover{
+  color:white;
+}
+div.footerlinks{
+  color:#B1AEDE;
+  width: 1100px;
+  height: 34px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 0;
+  padding-right: 0;
+}
+nav.sociallinks{
+  float:right;
+  display: inline-flex;
+  height: 34px;
+  width: 34px;
+  margin-left: 10px;
+  margin-right: -100px;
+}
+nav.sociallinks img{
+  display: inline-flex;
+  float:right;
+  height: 34px;
+  width: 34px;
+  margin-left: 10px;
+}
+nav.sociallinks img:hover{
+ opacity: .25;
+}
 hgroup,
 main,
 menu,
